# tinyfd

./: .gitignore  CMakeLists.txt  LUA_plugin.tinyfiledialogs.cpp  README.md
bindings/: plugin_lua.cpp  test.cs
example/: CMakeLists.txt
mingw/: tinyfiledialogs_dll32.bat  tinyfiledialogs_dll64.bat
